src/objects/QB_Bill_Payment_Details_Extract__c.object
<CustomObject>
    <description>Check Payments - header &amp; line Data Extracted provided by Astrum Solar for the purposes of cash matching</description>
    <fields>
        <fullName>AP_Account__c</fullName>
        <label>AP_Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_To_Bill_RefNumber__c</fullName>
        <label>Applied_To_Bill_RefNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Remaining__c</fullName>
        <label>Balance_Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <label>Bank_Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Txn_Date__c</fullName>
        <label>Bill_Txn_Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Account__c</fullName>
        <label>Discount_Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IR2_Bank_Account__c</fullName>
        <formula>Case (Bank_Account__c,
&quot;B of A Economy #9339 (Ben)&quot;,&quot;BOA Checking&quot;,
&quot;B of A Economy #9342 (Noah)&quot;,&quot;BOA Checking&quot;,
&quot;B of A Main Checking # 2394&quot;,&quot;BOA Checking&quot;,
&quot;BB&amp;T Main # 9641&quot;,&quot;BB&amp;T - Main&quot;,
&quot;BB&amp;T OH Acct x9722&quot;,&quot;BB&amp;T - OH ACCOUNT&quot;,
&quot;BB&amp;T Operating 1  # 9579&quot;,&quot;BB&amp;T - Operating (1)&quot;,
&quot;BB&amp;T Operating 2  # 9633&quot;,&quot;BB&amp;T - Operating (2)&quot;,
&quot;BB&amp;T SRECS  # 9668&quot;,&quot;BB&amp;T - SRECs&quot;,
&quot;BridgeBank Main x9506&quot;,&quot;Bridge Bank - Main&quot;,
&quot;BridgeBank Operating x0188&quot;,&quot;BridgeBank - Operating&quot;,
&quot;BB&amp;T - Main&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Bank Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Payee__c</fullName>
        <formula>If (Left(Payee__c,6) = &apos;CSTMR*&apos;,
Right(Payee__c,LEN(Payee__c)-8),
If (Left(Payee__c,5) = &apos;CSTMR&apos;,
Right(Payee__c,LEN(Payee__c)-7),
If (Left(Payee__c,3) = &apos;EMP&apos;,
Right(Payee__c,LEN(Payee__c)-4),
Payee__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Payee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Payment_Amount__c</fullName>
        <formula>Temp_Bill_Check_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <label>Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment_Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RefNumber__c</fullName>
        <label>RefNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXnLineID__c</fullName>
        <label>TXnLineID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Bill_Check_Amount__c</fullName>
        <label>Temp_Bill_Check_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TxnDate__c</fullName>
        <label>TxnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TxnID__c</fullName>
        <label>TxnID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>QB Bill Payment Details Extract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TxnID__c</columns>
        <columns>AP_Account__c</columns>
        <columns>Applied_To_Bill_RefNumber__c</columns>
        <columns>Balance_Remaining__c</columns>
        <columns>Bank_Account__c</columns>
        <columns>Bill_Txn_Date__c</columns>
        <columns>Payee__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>IR2_Payment_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Temp_Bill_Check_Amount__c</columns>
        <columns>RefNumber__c</columns>
        <columns>TxnDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ByYear</fullName>
        <columns>NAME</columns>
        <columns>TxnID__c</columns>
        <columns>AP_Account__c</columns>
        <columns>Applied_To_Bill_RefNumber__c</columns>
        <columns>Balance_Remaining__c</columns>
        <columns>Bank_Account__c</columns>
        <columns>Bill_Txn_Date__c</columns>
        <columns>Payee__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>IR2_Payment_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Temp_Bill_Check_Amount__c</columns>
        <columns>RefNumber__c</columns>
        <columns>TxnDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TxnDate__c</field>
            <operation>lessThan</operation>
            <value>1/1/2009</value>
        </filters>
        <label>By Year</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>AP_Account__c</columns>
        <columns>Applied_To_Bill_RefNumber__c</columns>
        <columns>Bank_Account__c</columns>
        <columns>Bill_Txn_Date__c</columns>
        <columns>IR2_Bank_Account__c</columns>
        <columns>Payee__c</columns>
        <columns>IR2_Payment_Amount__c</columns>
        <columns>Temp_Bill_Check_Amount__c</columns>
        <columns>IR2_Payee__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Processed__c</columns>
        <columns>RefNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>VendorCredit</value>
        </filters>
        <label>Unprocessed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>QB Bill Payment Details Extract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Bill Payment Details Extract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>